Added middleware and fixed issues

--- a/ThaniyasApp/appsettings.json
+++ b/ThaniyasApp/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ApiAppConfig": {
+    "Url": "http://localhost:56492",
+    "KeyValue": "TestApiKeyValue"
+  },
+  "SessionTimeOut": 10,
+  "AllowedHosts": "*",
+  "debugMode": true
 }
