--- a/ThaniyasApp/ThaniyasApp.csproj
+++ b/ThaniyasApp/ThaniyasApp.csproj
@@ -28,6 +28,7 @@
   <ItemGroup>
     <None Remove="ClientApp\src\containers\common\AppFrame.tsx" />
     <None Remove="ClientApp\src\containers\common\AppFrame\intex.ts" />
+    <None Remove="ClientApp\src\containers\common\Confirm.tsx" />
     <None Remove="ClientApp\src\containers\common\Footer.tsx" />
     <None Remove="ClientApp\src\containers\common\Header.tsx" />
     <None Remove="ClientApp\src\containers\core\Harvesting\HarvestDetails.tsx" />
@@ -126,6 +127,12 @@
 
   <ItemGroup>
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Update="ClientApp\src\containers\common\Confirm.tsx">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
