Added initial form validation
Added initial form validation

--- a/ThaniyasApp/ThaniyasApp.csproj
+++ b/ThaniyasApp/ThaniyasApp.csproj
@@ -30,7 +30,9 @@
     <None Remove="ClientApp\src\containers\common\AppFrame\intex.ts" />
     <None Remove="ClientApp\src\containers\common\Confirm.tsx" />
     <None Remove="ClientApp\src\containers\common\Footer.tsx" />
+    <None Remove="ClientApp\src\containers\common\FormValidationRules.ts" />
     <None Remove="ClientApp\src\containers\common\Header.tsx" />
+    <None Remove="ClientApp\src\containers\common\UseForm.ts" />
     <None Remove="ClientApp\src\containers\core\Harvesting\HarvestDetails.tsx" />
     <None Remove="ClientApp\src\containers\core\Harvesting\Harvesting.tsx" />
     <None Remove="ClientApp\src\containers\core\Harvesting\HarvestingEditPage.tsx" />
@@ -131,6 +133,12 @@
 
   <ItemGroup>
     <TypeScriptCompile Update="ClientApp\src\containers\common\Confirm.tsx">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Update="ClientApp\src\containers\common\FormValidationRules.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Update="ClientApp\src\containers\common\UseForm.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
   </ItemGroup>
