--- a/ionic web/capacitor.config.json
+++ b/ionic web/capacitor.config.json
@@ -4,5 +4,11 @@
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "build",
-  "cordova": {}
+  "cordova": {},
+  "plugins": {
+    "GoogleAuth": {
+    "scopes": ["profile","email"],
+    "serverClientId": "825025305729-e1b9kjkf9hqfv62j38b304nl0r69grd6.apps.googleusercontent.com"
+    }
+    }
 }
