--- a/ionic web/package.json
+++ b/ionic web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@capacitor/android": "^1.3.0",
     "@capacitor/core": "1.3.0",
+    "@codetrix-studio/capacitor-google-auth": "^2.1.1",
     "@ionic-native/calendar": "^5.17.1",
     "@ionic-native/file": "^5.22.0",
     "@ionic-native/http": "^5.26.0",
@@ -26,12 +27,13 @@
     "capacitor": "^0.5.5",
     "cordova-plugin-advanced-http": "^2.4.1",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-googleplus": "^8.5.0",
     "cordova-plugin-sim": "^1.3.3",
     "icons": "^1.0.0",
     "ionic-image-loader": "^6.3.3",
     "ionicons": "^4.6.3",
     "moment": "^2.24.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.14.1",
     "react": "^16.10.2",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.10.2",
@@ -41,7 +43,7 @@
     "react-responsive": "^8.0.1",
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.1",
     "react-table": "^7.0.0-rc.15",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
