--- a/ionic web/package.json
+++ b/ionic web/package.json
@@ -12,6 +12,7 @@
     "@ionic-native/sim": "^5.26.0",
     "@ionic/react": "^4.11.0",
     "@ionic/react-router": "^4.11.0",
+    "@mobiscroll/react-lite": "^4.10.2",
     "@progress/kendo-react-dropdowns": "^3.10.1",
     "@progress/kendo-react-intl": "^3.10.1",
     "@types/jest": "^24.0.18",
@@ -31,6 +32,7 @@
     "cordova-plugin-sim": "^1.3.3",
     "icons": "^1.0.0",
     "ionic-image-loader": "^6.3.3",
+    "ionic-tooltips": "^3.1.0",
     "ionicons": "^4.6.3",
     "moment": "^2.24.0",
     "node-sass": "^4.14.1",
@@ -45,6 +47,7 @@
     "react-router-dom": "^5.1.0",
     "react-scripts": "^3.4.1",
     "react-table": "^7.0.0-rc.15",
+    "react-tooltip": "^4.2.7",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "typescript": "3.6.3"
@@ -73,5 +76,7 @@
   "description": "An Ionic project",
   "devDependencies": {
     "@capacitor/cli": "1.3.0"
-  }
+  },
+  "main": "index.js",
+  "license": "MIT"
 }
