--- a/ionic web/package.json
+++ b/ionic web/package.json
@@ -1,82 +1,82 @@
 {
-  "name": "ThaniyasApp",
-  "version": "0.0.1",
-  "private": true,
-  "dependencies": {
-    "@capacitor/android": "^2.1.2",
-    "@capacitor/core": "2.1.2",
-    "@codetrix-studio/capacitor-google-auth": "^2.1.1",
-    "@ionic-native/calendar": "^5.17.1",
-    "@ionic-native/file": "^5.22.0",
-    "@ionic-native/http": "^5.26.0",
-    "@ionic-native/sim": "^5.26.0",
-    "@ionic/react": "^4.11.0",
-    "@ionic/react-router": "^4.11.0",
-    "@mobiscroll/react-lite": "^4.10.2",
-    "@progress/kendo-react-dropdowns": "^3.10.1",
-    "@progress/kendo-react-intl": "^3.10.1",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.12",
-    "@types/react": "^16.9.5",
-    "@types/react-datepicker": "^2.10.0",
-    "@types/react-dom": "^16.9.1",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-router": "^5.1.1",
-    "@types/react-router-dom": "^5.1.0",
-    "@types/react-table": "^7.0.4",
-    "axios": "^0.19.1",
-    "capacitor": "^0.5.5",
-    "cordova-plugin-advanced-http": "^2.4.1",
-    "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-googleplus": "^8.5.0",
-    "cordova-plugin-sim": "^1.3.3",
-    "icons": "^1.0.0",
-    "ionic-image-loader": "^6.3.3",
-    "ionic-tooltips": "^3.1.0",
-    "ionicons": "^4.6.3",
-    "moment": "^2.24.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.10.2",
-    "react-datepicker": "^2.10.1",
-    "react-dom": "^16.10.2",
-    "react-infinite-scroll-component": "^5.0.4",
-    "react-moment": "^0.9.7",
-    "react-redux": "^7.1.3",
-    "react-responsive": "^8.0.1",
-    "react-router": "^5.1.0",
-    "react-router-dom": "^5.1.0",
-    "react-scripts": "^3.4.1",
-    "react-table": "^7.0.0-rc.15",
-    "react-tooltip": "^4.2.7",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.3",
-    "typescript": "3.6.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "description": "An Ionic project",
-  "devDependencies": {
-    "@capacitor/cli": "1.3.0"
-  },
-  "main": "index.js",
-  "license": "MIT"
+    "name": "ThaniyasApp",
+    "version": "0.0.1",
+    "private": true,
+    "dependencies": {
+        "@capacitor/android": "^2.1.2",
+        "@capacitor/core": "2.1.2",
+        "@codetrix-studio/capacitor-google-auth": "^2.1.1",
+        "@ionic-native/calendar": "^5.17.1",
+        "@ionic-native/file": "^5.22.0",
+        "@ionic-native/firebase": "^5.28.0",
+        "@ionic-native/http": "^5.26.0",
+        "@ionic-native/sim": "^5.26.0",
+        "@ionic/react": "^4.11.0",
+        "@ionic/react-router": "^4.11.0",
+        "@progress/kendo-react-dropdowns": "^3.10.1",
+        "@progress/kendo-react-intl": "^3.10.1",
+        "@types/jest": "^24.0.18",
+        "@types/node": "^12.7.12",
+        "@types/react": "^16.9.5",
+        "@types/react-datepicker": "^2.10.0",
+        "@types/react-dom": "^16.9.1",
+        "@types/react-redux": "^7.1.5",
+        "@types/react-router": "^5.1.1",
+        "@types/react-router-dom": "^5.1.0",
+        "@types/react-table": "^7.0.4",
+        "axios": "^0.19.1",
+        "capacitor": "^0.5.5",
+        "cordova-plugin-advanced-http": "^2.4.1",
+        "cordova-plugin-file": "^6.0.2",
+        "cordova-plugin-googleplus": "^8.5.0",
+        "cordova-plugin-sim": "^1.3.3",
+        "icons": "^1.0.0",
+        "ionic-image-loader": "^6.3.3",
+        "ionic-tooltips": "^3.1.0",
+        "ionicons": "^4.6.3",
+        "moment": "^2.24.0",
+        "node-sass": "^4.14.1",
+        "react": "^16.10.2",
+        "react-datepicker": "^2.10.1",
+        "react-dom": "^16.10.2",
+        "react-infinite-scroll-component": "^5.0.4",
+        "react-moment": "^0.9.7",
+        "react-redux": "^7.1.3",
+        "react-responsive": "^8.0.1",
+        "react-router": "^5.1.0",
+        "react-router-dom": "^5.1.0",
+        "react-scripts": "^3.4.1",
+        "react-table": "^7.0.0-rc.15",
+        "react-tooltip": "^4.2.7",
+        "redux-devtools-extension": "^2.13.8",
+        "redux-saga": "^1.1.3",
+        "typescript": "3.6.3"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "description": "An Ionic project",
+    "devDependencies": {
+        "@capacitor/cli": "1.3.0"
+    },
+    "main": "index.js",
+    "license": "MIT"
 }
